src/python/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_SINGLELINE
    COMMENT_MULTILINE

Grammar

Rule 0     S' -> script_file
Rule 1     script_file -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment_statement
Rule 5     statement -> loop_statement
Rule 6     statement -> if_statement
Rule 7     statement -> break_statement
Rule 8     statement -> continue_statement
Rule 9     statement -> return_statement
Rule 10    statement -> include_statement
Rule 11    statement -> compound_statement
Rule 12    statement -> named_function_decl
Rule 13    assignment_statement -> lvalue ASSIGN expression SEMICOLON
Rule 14    assignment_statement -> lvalue ASSIGN_PLUS expression SEMICOLON
Rule 15    break_statement -> BREAK SEMICOLON
Rule 16    continue_statement -> CONTINUE SEMICOLON
Rule 17    include_statement -> INCLUDE expression SEMICOLON
Rule 18    return_statement -> RETURN SEMICOLON
Rule 19    return_statement -> RETURN expression SEMICOLON
Rule 20    loop_statement -> for_loop_statement
Rule 21    loop_statement -> do_loop_statement
Rule 22    loop_statement -> while_loop_statement
Rule 23    for_loop_statement -> FOR LPAREN ID IN expression RPAREN compound_statement
Rule 24    do_loop_statement -> DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 25    while_loop_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 26    compound_statement -> LBRACE statement_list RBRACE
Rule 27    if_statement -> IF LPAREN expression RPAREN compound_statement
Rule 28    if_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 29    lvalue -> ID
Rule 30    lvalue -> lvalue DOT ID
Rule 31    lvalue -> lvalue LBRACKET expression RBRACKET
Rule 32    expression -> binary_expression
Rule 33    binary_expression -> unary_expression
Rule 34    binary_expression -> binary_expression PLUS binary_expression
Rule 35    binary_expression -> binary_expression MINUS binary_expression
Rule 36    binary_expression -> binary_expression OR binary_expression
Rule 37    binary_expression -> binary_expression AND binary_expression
Rule 38    binary_expression -> binary_expression LT binary_expression
Rule 39    binary_expression -> binary_expression GT binary_expression
Rule 40    binary_expression -> binary_expression LEQ binary_expression
Rule 41    binary_expression -> binary_expression GEQ binary_expression
Rule 42    binary_expression -> binary_expression EQ binary_expression
Rule 43    binary_expression -> binary_expression NE binary_expression
Rule 44    unary_expression -> postfix_expression
Rule 45    unary_expression -> STAR unary_expression
Rule 46    unary_expression -> NOT binary_expression
Rule 47    unary_expression -> MINUS binary_expression
Rule 48    postfix_expression -> primary_expression
Rule 49    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 50    postfix_expression -> postfix_expression LPAREN expression_list RPAREN
Rule 51    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 52    postfix_expression -> postfix_expression DOT identifier_name
Rule 53    primary_expression -> identifier_name
Rule 54    primary_expression -> list_expression
Rule 55    primary_expression -> constant
Rule 56    primary_expression -> function_decl_expression
Rule 57    primary_expression -> lambda_expression
Rule 58    primary_expression -> dict_expression
Rule 59    primary_expression -> LPAREN expression RPAREN
Rule 60    constant -> INT_LITERAL
Rule 61    constant -> string_literal
Rule 62    constant -> boolean_literal
Rule 63    string_literal -> QUOTATION_MARK string_chars QUOTATION_MARK
Rule 64    string_chars -> <empty>
Rule 65    string_chars -> string_chars string_char
Rule 66    string_char -> UNESCAPED
Rule 67    string_char -> ESCAPE QUOTATION_MARK
Rule 68    string_char -> ESCAPE BACKSLASH
Rule 69    string_char -> ESCAPE BACKSPACE_CHAR
Rule 70    string_char -> ESCAPE FORM_FEED_CHAR
Rule 71    string_char -> ESCAPE LINE_FEED_CHAR
Rule 72    string_char -> ESCAPE CARRIAGE_RETURN_CHAR
Rule 73    string_char -> ESCAPE TAB_CHAR
Rule 74    string_char -> ESCAPE UNICODE_HEX
Rule 75    boolean_literal -> TRUE
Rule 76    boolean_literal -> FALSE
Rule 77    list_expression -> LBRACKET RBRACKET
Rule 78    list_expression -> LBRACKET expression_list RBRACKET
Rule 79    function_decl_expression -> FUNC LPAREN identifier_list RPAREN compound_statement
Rule 80    function_decl_expression -> FUNC LPAREN RPAREN compound_statement
Rule 81    named_function_decl -> FUNC ID LPAREN identifier_list RPAREN compound_statement
Rule 82    named_function_decl -> FUNC ID LPAREN RPAREN compound_statement
Rule 83    lambda_expression -> LAMBDA identifier_list COLON expression
Rule 84    lambda_expression -> LAMBDA COLON expression
Rule 85    dict_expression -> LBRACE RBRACE
Rule 86    dict_expression -> LBRACE key_value_list RBRACE
Rule 87    key_value_list -> expression COLON expression
Rule 88    key_value_list -> key_value_list COMMA expression COLON expression
Rule 89    expression_list -> expression
Rule 90    expression_list -> expression_list COMMA expression
Rule 91    identifier_list -> ID
Rule 92    identifier_list -> identifier_list COMMA ID
Rule 93    identifier_name -> ID

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 13
ASSIGN_PLUS          : 14
BACKSLASH            : 68
BACKSPACE_CHAR       : 69
BREAK                : 15
CARRIAGE_RETURN_CHAR : 72
COLON                : 83 84 87 88
COMMA                : 88 90 92
COMMENT_MULTILINE    : 
COMMENT_SINGLELINE   : 
CONTINUE             : 16
DO                   : 24
DOT                  : 30 52
ELSE                 : 28
EQ                   : 42
ESCAPE               : 67 68 69 70 71 72 73 74
FALSE                : 76
FOR                  : 23
FORM_FEED_CHAR       : 70
FUNC                 : 79 80 81 82
GEQ                  : 41
GT                   : 39
ID                   : 23 29 30 81 82 91 92 93
IF                   : 27 28
IN                   : 23
INCLUDE              : 17
INT_LITERAL          : 60
LAMBDA               : 83 84
LBRACE               : 26 85 86
LBRACKET             : 31 49 77 78
LEQ                  : 40
LINE_FEED_CHAR       : 71
LPAREN               : 23 24 25 27 28 50 51 59 79 80 81 82
LT                   : 38
MINUS                : 35 47
NE                   : 43
NOT                  : 46
OR                   : 36
PLUS                 : 34
QUOTATION_MARK       : 63 63 67
RBRACE               : 26 85 86
RBRACKET             : 31 49 77 78
RETURN               : 18 19
RPAREN               : 23 24 25 27 28 50 51 59 79 80 81 82
SEMICOLON            : 13 14 15 16 17 18 19 24
STAR                 : 45
TAB_CHAR             : 73
TRUE                 : 75
UNESCAPED            : 66
UNICODE_HEX          : 74
WHILE                : 24 25
error                : 

Nonterminals, with rules where they appear

assignment_statement : 4
binary_expression    : 32 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 46 47
boolean_literal      : 62
break_statement      : 7
compound_statement   : 11 23 24 25 27 28 28 79 80 81 82
constant             : 55
continue_statement   : 8
dict_expression      : 58
do_loop_statement    : 21
expression           : 13 14 17 19 23 24 25 27 28 31 49 59 83 84 87 87 88 88 89 90
expression_list      : 50 78 90
for_loop_statement   : 20
function_decl_expression : 56
identifier_list      : 79 81 83 92
identifier_name      : 52 53
if_statement         : 6
include_statement    : 10
key_value_list       : 86 88
lambda_expression    : 57
list_expression      : 54
loop_statement       : 5
lvalue               : 13 14 30 31
named_function_decl  : 12
postfix_expression   : 44 49 50 51 52
primary_expression   : 48
return_statement     : 9
script_file          : 0
statement            : 2 3
statement_list       : 1 3 26
string_char          : 65
string_chars         : 63 65
string_literal       : 61
unary_expression     : 33 45
while_loop_statement : 22

Parsing method: LALR

state 0

    (0) S' -> . script_file
    (1) script_file -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment_statement
    (5) statement -> . loop_statement
    (6) statement -> . if_statement
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . include_statement
    (11) statement -> . compound_statement
    (12) statement -> . named_function_decl
    (13) assignment_statement -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment_statement -> . lvalue ASSIGN_PLUS expression SEMICOLON
    (20) loop_statement -> . for_loop_statement
    (21) loop_statement -> . do_loop_statement
    (22) loop_statement -> . while_loop_statement
    (27) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (28) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (15) break_statement -> . BREAK SEMICOLON
    (16) continue_statement -> . CONTINUE SEMICOLON
    (18) return_statement -> . RETURN SEMICOLON
    (19) return_statement -> . RETURN expression SEMICOLON
    (17) include_statement -> . INCLUDE expression SEMICOLON
    (26) compound_statement -> . LBRACE statement_list RBRACE
    (81) named_function_decl -> . FUNC ID LPAREN identifier_list RPAREN compound_statement
    (82) named_function_decl -> . FUNC ID LPAREN RPAREN compound_statement
    (29) lvalue -> . ID
    (30) lvalue -> . lvalue DOT ID
    (31) lvalue -> . lvalue LBRACKET expression RBRACKET
    (23) for_loop_statement -> . FOR LPAREN ID IN expression RPAREN compound_statement
    (24) do_loop_statement -> . DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
    (25) while_loop_statement -> . WHILE LPAREN expression RPAREN compound_statement

    IF              shift and go to state 21
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 2
    INCLUDE         shift and go to state 19
    LBRACE          shift and go to state 22
    FUNC            shift and go to state 3
    ID              shift and go to state 20
    FOR             shift and go to state 18
    DO              shift and go to state 1
    WHILE           shift and go to state 6

    return_statement               shift and go to state 13
    while_loop_statement           shift and go to state 9
    do_loop_statement              shift and go to state 8
    loop_statement                 shift and go to state 4
    compound_statement             shift and go to state 10
    lvalue                         shift and go to state 11
    for_loop_statement             shift and go to state 23
    assignment_statement           shift and go to state 12
    break_statement                shift and go to state 5
    continue_statement             shift and go to state 14
    statement                      shift and go to state 15
    include_statement              shift and go to state 7
    statement_list                 shift and go to state 27
    named_function_decl            shift and go to state 16
    if_statement                   shift and go to state 17
    script_file                    shift and go to state 24

state 1

    (24) do_loop_statement -> DO . compound_statement WHILE LPAREN expression RPAREN SEMICOLON
    (26) compound_statement -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 22

    compound_statement             shift and go to state 28

state 2

    (18) return_statement -> RETURN . SEMICOLON
    (19) return_statement -> RETURN . expression SEMICOLON
    (32) expression -> . binary_expression
    (33) binary_expression -> . unary_expression
    (34) binary_expression -> . binary_expression PLUS binary_expression
    (35) binary_expression -> . binary_expression MINUS binary_expression
    (36) binary_expression -> . binary_expression OR binary_expression
    (37) binary_expression -> . binary_expression AND binary_expression
    (38) binary_expression -> . binary_expression LT binary_expression
    (39) binary_expression -> . binary_expression GT binary_expression
    (40) binary_expression -> . binary_expression LEQ binary_expression
    (41) binary_expression -> . binary_expression GEQ binary_expression
    (42) binary_expression -> . binary_expression EQ binary_expression
    (43) binary_expression -> . binary_expression NE binary_expression
    (44) unary_expression -> . postfix_expression
    (45) unary_expression -> . STAR unary_expression
    (46) unary_expression -> . NOT binary_expression
    (47) unary_expression -> . MINUS binary_expression
    (48) postfix_expression -> . primary_expression
    (49) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (50) postfix_expression -> . postfix_expression LPAREN expression_list RPAREN
    (51) postfix_expression -> . postfix_expression LPAREN RPAREN
    (52) postfix_expression -> . postfix_expression DOT identifier_name
    (53) primary_expression -> . identifier_name
    (54) primary_expression -> . list_expression
    (55) primary_expression -> . constant
    (56) primary_expression -> . function_decl_expression
    (57) primary_expression -> . lambda_expression
    (58) primary_expression -> . dict_expression
    (59) primary_expression -> . LPAREN expression RPAREN
    (93) identifier_name -> . ID
    (77) list_expression -> . LBRACKET RBRACKET
    (78) list_expression -> . LBRACKET expression_list RBRACKET
    (60) constant -> . INT_LITERAL
    (61) constant -> . string_literal
    (62) constant -> . boolean_literal
    (79) function_decl_expression -> . FUNC LPAREN identifier_list RPAREN compound_statement
    (80) function_decl_expression -> . FUNC LPAREN RPAREN compound_statement
    (83) lambda_expression -> . LAMBDA identifier_list COLON expression
    (84) lambda_expression -> . LAMBDA COLON expression
    (85) dict_expression -> . LBRACE RBRACE
    (86) dict_expression -> . LBRACE key_value_list RBRACE
    (63) string_literal -> . QUOTATION_MARK string_chars QUOTATION_MARK
    (75) boolean_literal -> . TRUE
    (76) boolean_literal -> . FALSE

    SEMICOLON       shift and go to state 39
    STAR            shift and go to state 35
    NOT             shift and go to state 52
    MINUS           shift and go to state 38
    LPAREN          shift and go to state 46
    ID              shift and go to state 48
    LBRACKET        shift and go to state 33
    INT_LITERAL     shift and go to state 44
    FUNC            shift and go to state 29
    LAMBDA          shift and go to state 55
    LBRACE          shift and go to state 49
    QUOTATION_MARK  shift and go to state 34
    TRUE            shift and go to state 37
    FALSE           shift and go to state 50

    constant                       shift and go to state 41
    binary_expression              shift and go to state 51
    unary_expression               shift and go to state 30
    lambda_expression              shift and go to state 31
    list_expression                shift and go to state 43
    postfix_expression             shift and go to state 40
    boolean_literal                shift and go to state 32
    primary_expression             shift and go to state 45
    function_decl_expression       shift and go to state 47
    identifier_name                shift and go to state 36
    expression                     shift and go to state 53
    dict_expression                shift and go to state 54
    string_literal                 shift and go to state 42

state 3

    (81) named_function_decl -> FUNC . ID LPAREN identifier_list RPAREN compound_statement
    (82) named_function_decl -> FUNC . ID LPAREN RPAREN compound_statement

    ID              shift and go to state 56


state 4

    (5) statement -> loop_statement .

    IF              reduce using rule 5 (statement -> loop_statement .)
    BREAK           reduce using rule 5 (statement -> loop_statement .)
    CONTINUE        reduce using rule 5 (statement -> loop_statement .)
    RETURN          reduce using rule 5 (statement -> loop_statement .)
    INCLUDE         reduce using rule 5 (statement -> loop_statement .)
    LBRACE          reduce using rule 5 (statement -> loop_statement .)
    FUNC            reduce using rule 5 (statement -> loop_statement .)
    ID              reduce using rule 5 (statement -> loop_statement .)
    FOR             reduce using rule 5 (statement -> loop_statement .)
    DO              reduce using rule 5 (statement -> loop_statement .)
    WHILE           reduce using rule 5 (statement -> loop_statement .)
    $end            reduce using rule 5 (statement -> loop_statement .)
    RBRACE          reduce using rule 5 (statement -> loop_statement .)


state 5

    (7) statement -> break_statement .

    IF              reduce using rule 7 (statement -> break_statement .)
    BREAK           reduce using rule 7 (statement -> break_statement .)
    CONTINUE        reduce using rule 7 (statement -> break_statement .)
    RETURN          reduce using rule 7 (statement -> break_statement .)
    INCLUDE         reduce using rule 7 (statement -> break_statement .)
    LBRACE          reduce using rule 7 (statement -> break_statement .)
    FUNC            reduce using rule 7 (statement -> break_statement .)
    ID              reduce using rule 7 (statement -> break_statement .)
    FOR             reduce using rule 7 (statement -> break_statement .)
    DO              reduce using rule 7 (statement -> break_statement .)
    WHILE           reduce using rule 7 (statement -> break_statement .)
    $end            reduce using rule 7 (statement -> break_statement .)
    RBRACE          reduce using rule 7 (statement -> break_statement .)


state 6

    (25) while_loop_statement -> WHILE . LPAREN expression RPAREN compound_statement

    LPAREN          shift and go to state 57


state 7

    (10) statement -> include_statement .

    IF              reduce using rule 10 (statement -> include_statement .)
    BREAK           reduce using rule 10 (statement -> include_statement .)
    CONTINUE        reduce using rule 10 (statement -> include_statement .)
    RETURN          reduce using rule 10 (statement -> include_statement .)
    INCLUDE         reduce using rule 10 (statement -> include_statement .)
    LBRACE          reduce using rule 10 (statement -> include_statement .)
    FUNC            reduce using rule 10 (statement -> include_statement .)
    ID              reduce using rule 10 (statement -> include_statement .)
    FOR             reduce using rule 10 (statement -> include_statement .)
    DO              reduce using rule 10 (statement -> include_statement .)
    WHILE           reduce using rule 10 (statement -> include_statement .)
    $end            reduce using rule 10 (statement -> include_statement .)
    RBRACE          reduce using rule 10 (statement -> include_statement .)


state 8

    (21) loop_statement -> do_loop_statement .

    RBRACE          reduce using rule 21 (loop_statement -> do_loop_statement .)
    IF              reduce using rule 21 (loop_statement -> do_loop_statement .)
    BREAK           reduce using rule 21 (loop_statement -> do_loop_statement .)
    CONTINUE        reduce using rule 21 (loop_statement -> do_loop_statement .)
    RETURN          reduce using rule 21 (loop_statement -> do_loop_statement .)
    INCLUDE         reduce using rule 21 (loop_statement -> do_loop_statement .)
    LBRACE          reduce using rule 21 (loop_statement -> do_loop_statement .)
    FUNC            reduce using rule 21 (loop_statement -> do_loop_statement .)
    ID              reduce using rule 21 (loop_statement -> do_loop_statement .)
    FOR             reduce using rule 21 (loop_statement -> do_loop_statement .)
    DO              reduce using rule 21 (loop_statement -> do_loop_statement .)
    WHILE           reduce using rule 21 (loop_statement -> do_loop_statement .)
    $end            reduce using rule 21 (loop_statement -> do_loop_statement .)


state 9

    (22) loop_statement -> while_loop_statement .

    RBRACE          reduce using rule 22 (loop_statement -> while_loop_statement .)
    IF              reduce using rule 22 (loop_statement -> while_loop_statement .)
    BREAK           reduce using rule 22 (loop_statement -> while_loop_statement .)
    CONTINUE        reduce using rule 22 (loop_statement -> while_loop_statement .)
    RETURN          reduce using rule 22 (loop_statement -> while_loop_statement .)
    INCLUDE         reduce using rule 22 (loop_statement -> while_loop_statement .)
    LBRACE          reduce using rule 22 (loop_statement -> while_loop_statement .)
    FUNC            reduce using rule 22 (loop_statement -> while_loop_statement .)
    ID              reduce using rule 22 (loop_statement -> while_loop_statement .)
    FOR             reduce using rule 22 (loop_statement -> while_loop_statement .)
    DO              reduce using rule 22 (loop_statement -> while_loop_statement .)
    WHILE           reduce using rule 22 (loop_statement -> while_loop_statement .)
    $end            reduce using rule 22 (loop_statement -> while_loop_statement .)


state 10

    (11) statement -> compound_statement .

    IF              reduce using rule 11 (statement -> compound_statement .)
    BREAK           reduce using rule 11 (statement -> compound_statement .)
    CONTINUE        reduce using rule 11 (statement -> compound_statement .)
    RETURN          reduce using rule 11 (statement -> compound_statement .)
    INCLUDE         reduce using rule 11 (statement -> compound_statement .)
    LBRACE          reduce using rule 11 (statement -> compound_statement .)
    FUNC            reduce using rule 11 (statement -> compound_statement .)
    ID              reduce using rule 11 (statement -> compound_statement .)
    FOR             reduce using rule 11 (statement -> compound_statement .)
    DO              reduce using rule 11 (statement -> compound_statement .)
    WHILE           reduce using rule 11 (statement -> compound_statement .)
    $end            reduce using rule 11 (statement -> compound_statement .)
    RBRACE          reduce using rule 11 (statement -> compound_statement .)


state 11

    (13) assignment_statement -> lvalue . ASSIGN expression SEMICOLON
    (14) assignment_statement -> lvalue . ASSIGN_PLUS expression SEMICOLON
    (30) lvalue -> lvalue . DOT ID
    (31) lvalue -> lvalue . LBRACKET expression RBRACKET

    ASSIGN          shift and go to state 60
    ASSIGN_PLUS     shift and go to state 58
    DOT             shift and go to state 61
    LBRACKET        shift and go to state 59


state 12

    (4) statement -> assignment_statement .

    IF              reduce using rule 4 (statement -> assignment_statement .)
    BREAK           reduce using rule 4 (statement -> assignment_statement .)
    CONTINUE        reduce using rule 4 (statement -> assignment_statement .)
    RETURN          reduce using rule 4 (statement -> assignment_statement .)
    INCLUDE         reduce using rule 4 (statement -> assignment_statement .)
    LBRACE          reduce using rule 4 (statement -> assignment_statement .)
    FUNC            reduce using rule 4 (statement -> assignment_statement .)
    ID              reduce using rule 4 (statement -> assignment_statement .)
    FOR             reduce using rule 4 (statement -> assignment_statement .)
    DO              reduce using rule 4 (statement -> assignment_statement .)
    WHILE           reduce using rule 4 (statement -> assignment_statement .)
    $end            reduce using rule 4 (statement -> assignment_statement .)
    RBRACE          reduce using rule 4 (statement -> assignment_statement .)


state 13

    (9) statement -> return_statement .

    IF              reduce using rule 9 (statement -> return_statement .)
    BREAK           reduce using rule 9 (statement -> return_statement .)
    CONTINUE        reduce using rule 9 (statement -> return_statement .)
    RETURN          reduce using rule 9 (statement -> return_statement .)
    INCLUDE         reduce using rule 9 (statement -> return_statement .)
    LBRACE          reduce using rule 9 (statement -> return_statement .)
    FUNC            reduce using rule 9 (statement -> return_statement .)
    ID              reduce using rule 9 (statement -> return_statement .)
    FOR             reduce using rule 9 (statement -> return_statement .)
    DO              reduce using rule 9 (statement -> return_statement .)
    WHILE           reduce using rule 9 (statement -> return_statement .)
    $end            reduce using rule 9 (statement -> return_statement .)
    RBRACE          reduce using rule 9 (statement -> return_statement .)


state 14

    (8) statement -> continue_statement .

    IF              reduce using rule 8 (statement -> continue_statement .)
    BREAK           reduce using rule 8 (statement -> continue_statement .)
    CONTINUE        reduce using rule 8 (statement -> continue_statement .)
    RETURN          reduce using rule 8 (statement -> continue_statement .)
    INCLUDE         reduce using rule 8 (statement -> continue_statement .)
    LBRACE          reduce using rule 8 (statement -> continue_statement .)
    FUNC            reduce using rule 8 (statement -> continue_statement .)
    ID              reduce using rule 8 (statement -> continue_statement .)
    FOR             reduce using rule 8 (statement -> continue_statement .)
    DO              reduce using rule 8 (statement -> continue_statement .)
    WHILE           reduce using rule 8 (statement -> continue_statement .)
    $end            reduce using rule 8 (statement -> continue_statement .)
    RBRACE          reduce using rule 8 (statement -> continue_statement .)


state 15

    (2) statement_list -> statement .

    RBRACE          reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    BREAK           reduce using rule 2 (statement_list -> statement .)
    CONTINUE        reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    INCLUDE         reduce using rule 2 (statement_list -> statement .)
    LBRACE          reduce using rule 2 (statement_list -> statement .)
    FUNC            reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    DO              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 16

    (12) statement -> named_function_decl .

    IF              reduce using rule 12 (statement -> named_function_decl .)
    BREAK           reduce using rule 12 (statement -> named_function_decl .)
    CONTINUE        reduce using rule 12 (statement -> named_function_decl .)
    RETURN          reduce using rule 12 (statement -> named_function_decl .)
    INCLUDE         reduce using rule 12 (statement -> named_function_decl .)
    LBRACE          reduce using rule 12 (statement -> named_function_decl .)
    FUNC            reduce using rule 12 (statement -> named_function_decl .)
    ID              reduce using rule 12 (statement -> named_function_decl .)
    FOR             reduce using rule 12 (statement -> named_function_decl .)
    DO              reduce using rule 12 (statement -> named_function_decl .)
    WHILE           reduce using rule 12 (statement -> named_function_decl .)
    $end            reduce using rule 12 (statement -> named_function_decl .)
    RBRACE          reduce using rule 12 (statement -> named_function_decl .)


state 17

    (6) statement -> if_statement .

    IF              reduce using rule 6 (statement -> if_statement .)
    BREAK           reduce using rule 6 (statement -> if_statement .)
    CONTINUE        reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    INCLUDE         reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    FUNC            reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    DO              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 18

    (23) for_loop_statement -> FOR . LPAREN ID IN expression RPAREN compound_statement

    LPAREN          shift and go to state 62


state 19

    (17) include_statement -> INCLUDE . expression SEMICOLON
    (32) expression -> . binary_expression
    (33) binary_expression -> . unary_expression
    (34) binary_expression -> . binary_expression PLUS binary_expression
    (35) binary_expression -> . binary_expression MINUS binary_expression
    (36) binary_expression -> . binary_expression OR binary_expression
    (37) binary_expression -> . binary_expression AND binary_expression
    (38) binary_expression -> . binary_expression LT binary_expression
    (39) binary_expression -> . binary_expression GT binary_expression
    (40) binary_expression -> . binary_expression LEQ binary_expression
    (41) binary_expression -> . binary_expression GEQ binary_expression
    (42) binary_expression -> . binary_expression EQ binary_expression
    (43) binary_expression -> . binary_expression NE binary_expression
    (44) unary_expression -> . postfix_expression
    (45) unary_expression -> . STAR unary_expression
    (46) unary_expression -> . NOT binary_expression
    (47) unary_expression -> . MINUS binary_expression
    (48) postfix_expression -> . primary_expression
    (49) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (50) postfix_expression -> . postfix_expression LPAREN expression_list RPAREN
    (51) postfix_expression -> . postfix_expression LPAREN RPAREN
    (52) postfix_expression -> . postfix_expression DOT identifier_name
    (53) primary_expression -> . identifier_name
    (54) primary_expression -> . list_expression
    (55) primary_expression -> . constant
    (56) primary_expression -> . function_decl_expression
    (57) primary_expression -> . lambda_expression
    (58) primary_expression -> . dict_expression
    (59) primary_expression -> . LPAREN expression RPAREN
    (93) identifier_name -> . ID
    (77) list_expression -> . LBRACKET RBRACKET
    (78) list_expression -> . LBRACKET expression_list RBRACKET
    (60) constant -> . INT_LITERAL
    (61) constant -> . string_literal
    (62) constant -> . boolean_literal
    (79) function_decl_expression -> . FUNC LPAREN identifier_list RPAREN compound_statement
    (80) function_decl_expression -> . FUNC LPAREN RPAREN compound_statement
    (83) lambda_expression -> . LAMBDA identifier_list COLON expression
    (84) lambda_expression -> . LAMBDA COLON expression
    (85) dict_expression -> . LBRACE RBRACE
    (86) dict_expression -> . LBRACE key_value_list RBRACE
    (63) string_literal -> . QUOTATION_MARK string_chars QUOTATION_MARK
    (75) boolean_literal -> . TRUE
    (76) boolean_literal -> . FALSE

    STAR            shift and go to state 35
    NOT             shift and go to state 52
    MINUS           shift and go to state 38
    LPAREN          shift and go to state 46
    ID              shift and go to state 48
    LBRACKET        shift and go to state 33
    INT_LITERAL     shift and go to state 44
    FUNC            shift and go to state 29
    LAMBDA          shift and go to state 55
    LBRACE          shift and go to state 49
    QUOTATION_MARK  shift and go to state 34
    TRUE            shift and go to state 37
    FALSE           shift and go to state 50

    constant                       shift and go to state 41
    binary_expression              shift and go to state 51
    unary_expression               shift and go to state 30
    lambda_expression              shift and go to state 31
    list_expression                shift and go to state 43
    postfix_expression             shift and go to state 40
    boolean_literal                shift and go to state 32
    primary_expression             shift and go to state 45
    function_decl_expression       shift and go to state 47
    identifier_name                shift and go to state 36
    expression                     shift and go to state 63
    dict_expression                shift and go to state 54
    string_literal                 shift and go to state 42

state 20

    (29) lvalue -> ID .

    ASSIGN          reduce using rule 29 (lvalue -> ID .)
    ASSIGN_PLUS     reduce using rule 29 (lvalue -> ID .)
    DOT             reduce using rule 29 (lvalue -> ID .)
    LBRACKET        reduce using rule 29 (lvalue -> ID .)


state 21

    (27) if_statement -> IF . LPAREN expression RPAREN compound_statement
    (28) if_statement -> IF . LPAREN expression RPAREN compound_statement ELSE compound_statement

    LPAREN          shift and go to state 64


state 22

    (26) compound_statement -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment_statement
    (5) statement -> . loop_statement
    (6) statement -> . if_statement
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . include_statement
    (11) statement -> . compound_statement
    (12) statement -> . named_function_decl
    (13) assignment_statement -> . lvalue ASSIGN expression SEMICOLON
    (14) assignment_statement -> . lvalue ASSIGN_PLUS expression SEMICOLON
    (20) loop_statement -> . for_loop_statement
    (21) loop_statement -> . do_loop_statement
    (22) loop_statement -> . while_loop_statement
    (27) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (28) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (15) break_statement -> . BREAK SEMICOLON
    (16) continue_statement -> . CONTINUE SEMICOLON
    (18) return_statement -> . RETURN SEMICOLON
    (19) return_statement -> . RETURN expression SEMICOLON
    (17) include_statement -> . INCLUDE expression SEMICOLON
    (26) compound_statement -> . LBRACE statement_list RBRACE
    (81) named_function_decl -> . FUNC ID LPAREN identifier_list RPAREN compound_statement
    (82) named_function_decl -> . FUNC ID LPAREN RPAREN compound_statement
    (29) lvalue -> . ID
    (30) lvalue -> . lvalue DOT ID
    (31) lvalue -> . lvalue LBRACKET expression RBRACKET
    (23) for_loop_statement -> . FOR LPAREN ID IN expression RPAREN compound_statement
    (24) do_loop_statement -> . DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
    (25) while_loop_statement -> . WHILE LPAREN expression RPAREN compound_statement

    IF              shift and go to state 21
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 2
    INCLUDE         shift and go to state 19
    LBRACE          shift and go to state 22
    FUNC            shift and go to state 3
    ID              shift and go to state 20
    FOR             shift and go to state 18
    DO              shift and go to state 1
    WHILE           shift and go to state 6

    return_statement               shift and go to state 13
    while_loop_statement           shift and go to state 9
    do_loop_statement              shift and go to state 8
    loop_statement                 shift and go to state 4
    compound_statement             shift and go to state 10
    lvalue                         shift and go to state 11
    for_loop_statement             shift and go to state 23
    assignment_statement           shift and go to state 12
    break_statement                shift and go to state 5
    continue_statement             shift and go to state 14
    statement                      shift and go to state 15
    include_statement              shift and go to state 7
    statement_list                 shift and go to state 65
    named_function_decl            shift and go to state 16
    if_statement                   shift and go to state 17

state 23

    (20) loop_statement -> for_loop_statement .
